@@ -17,11 +17,22 @@ Ubercart 3.x, xxxx-xx-xx (development version)
     * Removed uc_price().
     * Removed hook_uc_price_handler().
     * theme_uc_price() takes one parameter: 'price', a float.
+    * theme_uc_product_price() expects a render element with a #value and
+      optional #title and #attributes. Element children may be used to display
+      text after the price.
+    * 'view' $op added to hook_uc_cart_item()
+        - Allows modules to modify items before they are shown on the cart page.
 - Database:
     * Dropped {cache_uc_price}.
+    * Added {uc_taxed_product_types}.
+    * Added {uc_taxed_line_items}.
 - Forms:
     * Submit buttons wrapped in a #type = 'actions' container.
     * Edit order form now contains field widgets.
+- Taxes:
+    * Tax rates may be set to be included in product prices. Their associated
+      conditions are not checked until the checkout page, where they are shown
+      as separate line items and not part of product prices.
 
 Ubercart 3.0-alpha3, 2010-07-16
 -------------------------------
